--- a/public/it/maths.html
+++ b/public/it/maths.html
@@ -41,6 +41,11 @@
                     <a class="branch" href="/public/it/index.html">I.T</a>
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a class="branch" id="active" href="">Maths</a>
+                </li>
+            </ul>
 
     </nav>
     <!-- Cureent Book Info  -->
@@ -58,9 +63,30 @@
                 <h1 class="mdesc">4300001</h1>
                 <h1 class="mdesc2">Credit-4</h1>
                 <div>
-                    <a href="https://drive.google.com/uc?export=download&id=">
-                        <input class="miandownloadbtn" type="button" value="Download Book">
-                    </a>
+                    <div class="dropdown">
+                        <button class="miandownloadbtn" class="dropbtn">
+                            <div class="drp">
+                                <span>Select Download </span> <img
+                                    src="/public/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
+                                    style="width: 25px;margin-top: 10px;">
+                            </div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="https://drive.google.com/uc?export=download&">UNIT-1
+                            </a>
+                            <a
+                                href="https://drive.google.com/uc?export=download&">UNIT-2
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&">UNIT-3
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&">UNIT-4
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&">UNIT-5
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&">Full-Book
+                            </a>
+                        </div>
+                    </div>
                     <a href="https://drive.google.com/uc?export=download&id=1NBi1aZWsMv2gDKQL9JuWhLLGnC9So5nX">
                         <input class="miandownloadbtn" type="button" value="Syllabus">
 
@@ -82,7 +108,7 @@
     </h1>
     <div class="recommian">
         <!-- Python -->
-
+<a href="/public/it/pythonprogramming.html">
         <div class="reccontent">
             <div class="img">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
@@ -93,14 +119,14 @@
                 <h1 class="desc">Credit-5</h1>
                 <input class="recopenbtn" type="button" value="Open >">
             </div>
-
+        </a>
 
 
 
         </div>
         <!--  -->
         <!-- IT SYS -->
-        <a href="/public/it/public/itsys.html">
+        <a href="/public/it/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
