--- a/public/it2/app.html
+++ b/public/it2/app.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="gtu-diploma-sem-2-books-download ,4300005 ,Adcanve Python Programming book download for free , it">
+    <meta name="keywords"
+        content="gtu-diploma-sem-2-books-download ,4300005 ,Adcanve Python Programming book download for free , it">
     <meta name="audience" content="Everyone">
     <meta name="description"
         content=" Advance Python Programming Sem-2 book, Syllabus, Last Year Paper Free Download | IT Sem-2 All Study Material free | Get GTU Diploma IT books free download |Sem-2 Diploma Engineering">
@@ -41,6 +42,11 @@
                     <a class="branch" href="/public/it/index.html">I.T</a>
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a class="branch" id="active" href="#">A.P.P</a>
+                </li>
+            </ul>
 
     </nav>
     <!-- Cureent Book Info  -->
@@ -58,24 +64,43 @@
                 <h1 class="mdesc">4300005</h1>
                 <h1 class="mdesc2">Credit-5</h1>
                 <div>
-                    <a href="https://drive.google.com/uc?export=download&id=1Bk_poa5XM4wZxZ05WGd-bGiwL8HmRdd1">
-                        <input class="miandownloadbtn" type="button" value="Download Book">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=1ClsrSl_u-yC3q_VydeeelcBq9GiCRI_C">
-                        <input class="miandownloadbtn" type="button" value="Syllabus">
+                    <div class="dropdown">
+                        <button class="miandownloadbtn" class="dropbtn">
+                            <div class="drp">
+                                <span>Select Download </span> <img
+                                    src="/public/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
+                                    style="width: 25px;margin-top: 10px;">
+                            </div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="https://drive.google.com/uc?export=download&id=1mJdZsf8TImi88b2RYuccucEfLZG-9uYj">UNIT-1
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-3
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-4
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-5
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1Bk_poa5XM4wZxZ05WGd-bGiwL8HmRdd1">Full-Book
+                            </a>
+                        </div>
+                        <a href="https://drive.google.com/uc?export=download&id=1ClsrSl_u-yC3q_VydeeelcBq9GiCRI_C">
+                            <input class="miandownloadbtn" type="button" value="Syllabus">
 
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=1YpSYw_7oUvfB-9yraari4-1oIn3aCaTi">
-                        <input class="miandownloadbtn" type="button" value="Paper">
+                        </a>
+                        <a href="https://drive.google.com/uc?export=download&id=1YpSYw_7oUvfB-9yraari4-1oIn3aCaTi">
+                            <input class="miandownloadbtn" type="button" value="Paper">
 
-                    </a>
+                        </a>
+
+                    </div>
 
                 </div>
-
             </div>
         </div>
-    </div>
-    <!-- Recommended -->
+        <!-- Recommended -->
     </div>
     <hr>
     <!-- Learn  -->
@@ -83,9 +108,12 @@
     <div class="learn">
         <div class="lcard">
             <div class="align">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/61a7UkDO50s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/61a7UkDO50s"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <div class="ccard">
-                    <h1 class="ccardc">CodeWithHarry  </h1>
+                    <h1 class="ccardc">CodeWithHarry </h1>
                     <h1 class="ccardc2">3.5M subscribers</h1>
                 </div>
 
@@ -179,7 +207,7 @@
                 </div>
 
             </div>
-        </a>
+       
         <!-- Database Management -->
         <a href="/public/it3/dm.html">
             <div class="reccontent">
@@ -192,6 +220,7 @@
                 </div>
 
             </div>
+        </a>
         </a>
         <!--  Linux Operating System -->
         <a href="/public/it3/linuxOS.html">
@@ -232,18 +261,18 @@
         <!-- Python -->
         <a href="/public/it/pythonprogramming.html">
 
-        <div class="reccontent">
-            <div class="img">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
+            <div class="reccontent">
+                <div class="img">
+                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
+                </div>
+                <div class="align">
+                    <h1 class="recbookname">Python Programming </h1>
+                    <h1 class="desc2">4311601</h1>
+                    <h1 class="desc">Credit-5</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
             </div>
-            <div class="align">
-                <h1 class="recbookname">Python Programming </h1>
-                <h1 class="desc2">4311601</h1>
-                <h1 class="desc">Credit-5</h1>
-                <input class="recopenbtn" type="button" value="Open >">
-            </div>
-        </div>
-    </a>
+        </a>
         <!-- IT SYS -->
         <a href="/public/it/public/itsys.html">
             <div class="reccontent">
