--- a/public/it2/emaths.html
+++ b/public/it2/emaths.html
@@ -132,6 +132,9 @@
             </a>
         </div>
             <!--  Physics -->
+            <script>
+                
+            </script>
             <a href="/public/it2/physics.html">
                 <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
