--- a/public/it/index.html
+++ b/public/it/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styleit1.css">
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
 
+    <link rel="stylesheet" href="/public//it/pp.css">
     <link rel="stylesheet" href="/public/it/index.css">
 
 </head>
@@ -30,7 +31,7 @@
 
             <ul>
                 <li>
-                    <a class="#" href="" style="text-decoration: 3px solid orange overline;">I.T</a>
+                    <a class="#" href="" id="active">I.T</a>
                 </li>
             </ul>
 
@@ -59,7 +60,7 @@
         <!-- IT SYS -->
         <a href="/public/it/itsys.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
+                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Introduction to IT Systems </h1>
                     <h1 class="desc2">4311602</h1>
@@ -70,9 +71,9 @@
             </div>
         </a>
         <!-- Maths -->
-        <a href="/public/it/maths.html">
+        <a  href="/public/it/maths.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
+                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Mathematics </h1>
                     <h1 class="desc2">4300001</h1>
@@ -86,7 +87,7 @@
         <!-- English -->
         <a href="/public/it/english.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
+                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Communication Skills in English </h1>
                     <h1 class="desc2">4300002</h1>
@@ -99,10 +100,10 @@
         </a>
     </div>
     <!-- Sem-2 -->
-    <h1 style="background-color: rgb(128, 128, 128,0.2);" class="header1">Semester-2</h1>
-    <div style="background-color: rgb(128, 128, 128,0.2);" class="recommian">
+    <h1  class="header1">Semester-2</h1>
+    <div  class="recommian">
         <!-- Advance Python -->
-        <a href="">
+        <a href="/public/it2/app.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
@@ -119,7 +120,7 @@
             </div>
         </a>
         <!-- Maths 2 -->
-        <a href="">
+        <a href="/public/it2/emaths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
                 <div class="align">
@@ -132,7 +133,7 @@
             </div>
         </a>
         <!--  Physics -->
-        <a href="">
+        <a href="/public/it2/physics.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -146,7 +147,7 @@
             </div>
         </a>
         <!-- ES -->
-        <a href="">
+        <a href="/public/it2/es.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
                 <div class="align">
@@ -164,7 +165,7 @@
     <h1 class="header1">Semester-3</h1>
     <div class="recommian">
         <!-- Data Structure with Python -->
-        <a href="">
+        <a href="/public/it3/dsp.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
@@ -181,7 +182,7 @@
             </div>
         </a>
         <!-- Database Management -->
-        <a href="">
+        <a href="/public/it3/dm.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -194,7 +195,7 @@
             </div>
         </a>
         <!--  Linux Operating System -->
-        <a href="">
+        <a href="/public/it3/linuxOS.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
                     srcset="">
@@ -209,7 +210,7 @@
             </div>
         </a>
         <!--  Fundamentals of Software Development -->
-        <a href="">
+        <a href="/public/it3/FSD.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
                 <div class="align">
@@ -226,5 +227,5 @@
     <h1 class="foottext">@KhudKibook</h1>
 
 </body>
-
+<script src="/public/src.js"></script>
 </html>
