--- a/public/it/pythonprogramming.html
+++ b/public/it/pythonprogramming.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it">
+    <meta name="keywords"
+        content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it">
     <meta name="audience" content="Everyone">
-    <meta name="description" content=" Python Programming Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
+    <meta name="description"
+        content=" Python Programming Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Diploma Python Programming-KhudKibook </title>
-    <meta name="description" content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
+    <meta name="description"
+        content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="stylesheet" href="/public/it/pp.css">
 
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
@@ -23,32 +26,37 @@
         <div id="appbar">
             <a href="/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
-            </a> 
+            </a>
 
             <div class="home">
                 <ul>
                     <li>
                         <a class="home" href="/public/index.html">Home</a>
                     </li>
+
                 </ul>
 
             </div>
 
             <ul>
                 <li>
-                    <a class="branch" href="/public/it/index.html" >I.T</a>
+                    <a class="branch" href="/public/it/index.html">I.T</a>
                 </li>
             </ul>
-        
+            <ul>
+                <li>
+                    <a class="branch" id="active" href="/public/it/index.html">P.P</a>
+                </li>
+            </ul>
+
+
     </nav>
     <!-- Cureent Book Info  -->
     <div class="main">
         <h1 class="mainheader">Python Programming Study Material </h1>
         <div class="row">
-                <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="Book Photo"
-                    srcset="">
-            
-
+            <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="Book Photo"
+                srcset="">
             <div class="design"></div>
             <div class="cloumn">
                 <!-- <span class="mainheadtext">Download GTU Diploma Engineering book free </span> -->
@@ -56,12 +64,32 @@
                 <h1 class="mdesc">4311601</h1>
                 <h1 class="mdesc2">Credit-5</h1>
                 <div>
-                    <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">
-                        <input class="miandownloadbtn" type="button" value="Download Book">
-                    </a>
+                    <div class="dropdown">
+                        <button class="miandownloadbtn" class="dropbtn">
+                            <div class="drp">
+                                <span>Select Download </span> <img
+                                    src="/public/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
+                                    style="width: 25px;margin-top: 10px;">
+                            </div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            </a>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                            </a>
+                        </div>
+                    </div>
                     <!-- <a href="https://drive.google.com/uc?export=download&id=">
                         <input class="miandownloadbtn" type="button" value="Practical">
-
                     </a> -->
                     <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
                         <input class="miandownloadbtn" type="button" value="Syllabus">
@@ -104,7 +132,7 @@
         </div>
         <!--  -->
         <!-- IT SYS -->
-        <a href="/public/it/public/itsys.html">
+        <a href="/public/it/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
@@ -117,7 +145,7 @@
             </div>
         </a>
         <!-- Maths -->
-        <a href="">
+        <a href="/public/it/maths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
                 <div class="align">
@@ -131,7 +159,7 @@
             </div>
         </a>
         <!-- English -->
-        <a href="">
+        <a href="/public/it/english.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
                 <div class="align">
@@ -163,137 +191,137 @@
             </div>
         </div>
     </div>
-<hr>
-<!-- Bottom nav -->
-<!-- Sem-2 -->
-<h1  class="recmainheader">Semester-2</h1>
-<div  class="recommian">
-    <!-- Advance Python -->
-    <a href="">
-        <div class="reccontent">
-            <div class="img">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
+    <hr>
+    <!-- Bottom nav -->
+    <!-- Sem-2 -->
+    <h1 class="recmainheader">Semester-2</h1>
+    <div class="recommian">
+        <!-- Advance Python -->
+        <a href="/public/it2/app.html">
+            <div class="reccontent">
+                <div class="img">
+                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
+
+                </div>
+                <div class="align">
+                    <h1 class="recbookname">Advance Python Programming </h1>
+                    <h1 class="desc2">4300005</h1>
+                    <h1 class="desc">Credit-5</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+
+                </div>
 
             </div>
-            <div class="align">
-                <h1 class="recbookname">Advance Python Programming </h1>
-                <h1 class="desc2">4300005</h1>
-                <h1 class="desc">Credit-5</h1>
-                <input class="recopenbtn" type="button" value="Open >">
+        </a>
+        <!-- Maths 2 -->
+        <a href="/public/it2/emaths.html">
+            <div class="reccontent">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
+                <div class="align">
+                    <h1 class="recbookname"> Engineering Mathematics </h1>
+                    <h1 class="desc2">4320002</h1>
+                    <h1 class="desc">Credit-4</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
 
             </div>
-
-        </div>
-    </a>
-    <!-- Maths 2 -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
-            <div class="align">
-                <h1 class="recbookname"> Engineering Mathematics </h1>
-                <h1 class="desc2">4320002</h1>
-                <h1 class="desc">Credit-4</h1>
-                <input class="recopenbtn" type="button" value="Open >">
-            </div>
-
-        </div>
-    </a>
-    <!--  Physics -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
-            <div class="align">
-                <h1 class="recbookname"> Physics </h1>
-                <h1 class="desc2">4300005</h1>
-                <h1 class="desc">Credit-4</h1>
-                <input class="recopenbtn" type="button" value="Open >">
-            </div>
-
-
-        </div>
-    </a>
-    <!-- ES -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
-            <div class="align">
-                <h1 class="recbookname">E.S </h1>
-                <h1 class="desc2">4300003</h1>
-                <h1 class="desc">Credit-3</h1>
-                <input class="recopenbtn" type="button" value="Open >">
-            </div>
-
-
-        </div>
-    </a>
-</div>
-<hr>
-<!-- Sem-3 -->
-<h1 class="recmainheader">Semester-3</h1>
-<div class="recommian">
-    <!-- Data Structure with Python -->
-    <a href="">
-        <div class="reccontent">
-            <div class="img">
+        </a>
+        <!--  Physics -->
+        <a href="/public/it2/physics.html">
+            <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
+                <div class="align">
+                    <h1 class="recbookname"> Physics </h1>
+                    <h1 class="desc2">4300005</h1>
+                    <h1 class="desc">Credit-4</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
+
 
             </div>
-            <div class="align">
-                <h1 class="recbookname"> Data Structure with Python </h1>
-                <h1 class="desc2">4330001</h1>
-                <h1 class="desc">Credit-5</h1>
-                <input class="recopenbtn" type="button" value="Open >">
+        </a>
+        <!-- ES -->
+        <a href="/public/it2/es.html">
+            <div class="reccontent">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
+                <div class="align">
+                    <h1 class="recbookname">E.S </h1>
+                    <h1 class="desc2">4300003</h1>
+                    <h1 class="desc">Credit-3</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
+
 
             </div>
+        </a>
+    </div>
+    <hr>
+    <!-- Sem-3 -->
+    <h1 class="recmainheader">Semester-3</h1>
+    <div class="recommian">
+        <!-- Data Structure with Python -->
+        <a href="/public/it3/dsp.html">
+            <div class="reccontent">
+                <div class="img">
+                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
 
-        </div>
-    </a>
-    <!-- Database Management -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
-            <div class="align">
-                <h1 class="recbookname"> Database Management </h1>
-                <h1 class="desc2">4331603</h1>
-                <h1 class="desc">Credit-5</h1>
-                <input class="recopenbtn" type="button" value="Open >">
+                </div>
+                <div class="align">
+                    <h1 class="recbookname"> Data Structure with Python </h1>
+                    <h1 class="desc2">4330001</h1>
+                    <h1 class="desc">Credit-5</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+
+                </div>
+
             </div>
+        </a>
+        <!-- Database Management -->
+        <a href="/public/it3/dm.html">
+            <div class="reccontent">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
+                <div class="align">
+                    <h1 class="recbookname"> Database Management </h1>
+                    <h1 class="desc2">4331603</h1>
+                    <h1 class="desc">Credit-5</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
 
-        </div>
-    </a>
-    <!--  Linux Operating System -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
-                srcset="">
-            <div class="align">
-                <h1 class="recbookname"> Linux Operating System </h1>
-                <h1 class="desc2">4331602</h1>
-                <h1 class="desc">Credit-4</h1>
-                <input class="recopenbtn" type="button" value="Open >">
             </div>
+        </a>
+        <!--  Linux Operating System -->
+        <a href="/public/it3/linuxOS.html">
+            <div class="reccontent">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
+                    srcset="">
+                <div class="align">
+                    <h1 class="recbookname"> Linux Operating System </h1>
+                    <h1 class="desc2">4331602</h1>
+                    <h1 class="desc">Credit-4</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
 
 
-        </div>
-    </a>
-    <!--  Fundamentals of Software Development -->
-    <a href="">
-        <div class="reccontent">
-            <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
-            <div class="align">
-                <h1 class="recbookname"> Fundamentals of Software Development </h1>
-                <h1 class="desc2">4331604</h1>
-                <h1 class="desc">Credit-4</h1>
-                <input class="recopenbtn" type="button" value="Open >">
             </div>
+        </a>
+        <!--  Fundamentals of Software Development -->
+        <a href="/public/it3/FSD.html">
+            <div class="reccontent">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
+                <div class="align">
+                    <h1 class="recbookname"> Fundamentals of Software Development </h1>
+                    <h1 class="desc2">4331604</h1>
+                    <h1 class="desc">Credit-4</h1>
+                    <input class="recopenbtn" type="button" value="Open >">
+                </div>
 
 
-        </div>
-    </a>
-</div>
-<!-- Footer -->
+            </div>
+        </a>
+    </div>
+    <!-- Footer -->
 
-<h1 class="foottext" >@KhudKibook</h1>
+    <h1 class="foottext">@KhudKibook</h1>
 
 </body>
 
