--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
             <a class="link" href="https://khudkibook.web.app/">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo">
             </a>
-            <div class="home" id="active">
+            <div class="home" >
                 <ul>
                     <li>
-                        <a class="home" href="">Home</a>
+                        <a  id="active" href="">Home</a>
                     </li>
                 </ul>
 
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </a>
-        <a href="">
+        <a href="/public/cv/index.html">
             <div class="civil">
                 <img class="itimg" src="https://cdn-icons-png.flaticon.com/512/609/609034.png" alt="">
                 <div class="cvh">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </a>
-        <a href="">
+        <a href="/public/el/index.html">
             <div class="electrical">
                 <img src="https://cdn-icons-png.flaticon.com/512/2907/2907301.png" alt="" class="itimg">
                 <div class="elh">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </a>
-        <a href="">
+        <a href="/public/me/index.html">
             <div class="mechanical">
                 <img src="https://cdn-icons-png.flaticon.com/512/1995/1995450.png" alt="" class="itimg">
                 <div class="meh">
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </a>
-        <a id="cpli" href="">
+        <a id="cpli" href="/public/cp/index.html">
             <div class="computer">
                 <img src="https://cdn-icons-png.flaticon.com/512/186/186225.png" alt="" class="itimg">
                 <div class="cph">
